# nmigen

./: .travis.yml  LICENSE.txt  README.md  local_scheme.py  setup.cfg  setup.py
doc/: COMPAT_SUMMARY.md  conf.py  hdl.rst  index.rst  introduction.rst  requirements.txt
examples/basic/: uart.py
examples/blinky/: tinyfpga_BX.py
nmigen/: _toolchain.py  cli.py
nmigen/back/: rtlil.py  verilog.py
nmigen/compat/fhdl/: specials.py
nmigen/hdl/: ast.py  dsl.py  ir.py  mem.py  rec.py  xfrm.py
nmigen/lib/: cdc.py  fifo.py  io.py
nmigen/test/: test_build_constraint.py  test_build_dsl.py  test_build_generic_platform.py  test_examples.py  test_hdl_ast.py  test_hdl_dsl.py  test_hdl_ir.py  test_hdl_mem.py  test_hdl_rec.py  test_hdl_xfrm.py  test_lib_cdc.py  test_lib_fifo.py  test_lib_io.py  test_sim.py  tools.py  utils.py
