[bdist_wheel]
universal=1

[metadata]
name = nmigen
author = whitequark
author_email = whitequark@whitequark.org
description = Python toolbox for building complex digital hardware
license = BSD
project_urls =
    Source Code=https://github.com/m-labs/nmigen
    Bug Tracker=https://github.com/m-labs/nmigen/issues

[options]
python_requires = ~=3.6
install_requires =
    pyvcd~=0.1.4
    Jinja2
packages = find:

[options.entry_points]
console_scripts =
    nmigen-rpc = nmigen.rpc:main

[tools.setuptools_scm]
version_scheme = guess-next-dev
local_scheme = local_scheme.local_scheme
